CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT("nml")

SET(CMAKE_CXX_FLAGS "-std=c++2b -Wpedantic -Wall")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FILE(GLOB SOURCES
	"src/*.cpp"
	"src/*.tcc"
)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(GUILE guile-3.0 REQUIRED IMPORTED_TARGET)

ADD_SUBDIRECTORY(libs/fmt)
ADD_SUBDIRECTORY(libs/cxxopts)

INCLUDE_DIRECTORIES(libs/cxxopts)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} fmt PkgConfig::GUILE)
