CMAKE_MINIMUM_REQUIRED(VERSION 3.27)

PROJECT(nml
	DESCRIPTION "Simple and powerful markup language compiler"
	HOMEPAGE_URL "https://github.com/ef3d0c3e/NML"
	LANGUAGES CXX)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_FLAGS "-std=c++2b -Wpedantic -Werror -Wall -Wextra -pedantic -Wall -O3")

FILE(GLOB NML_SOURCES
	"src/nml/*.cpp"
	"src/nml/*.tcc"
)

FILE(GLOB TEST_SOURCES
	"src/tests/*.cpp"
	"src/tests/*.tcc"
)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(GUILE guile-3.0 REQUIRED IMPORTED_TARGET)

ADD_SUBDIRECTORY(libs/fmt)
ADD_SUBDIRECTORY(libs/cxxopts)
ADD_SUBDIRECTORY(libs/Catch2)
ADD_SUBDIRECTORY(libs/utfcpp)

INCLUDE_DIRECTORIES(libs/cxxopts/include)
INCLUDE_DIRECTORIES(libs/utfcpp/sources)

SET(NML_LIBRARIES fmt PkgConfig::GUILE)


# Release
if(${BUILD_TYPE} STREQUAL "Debug")
	ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} src/NML.cpp ${NML_SOURCES})
	TARGET_COMPILE_OPTIONS(${CMAKE_PROJECT_NAME} PRIVATE -ggdb -Og -fno-omit-frame-pointer)
	TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${NML_LIBRARIES})
elseif(${BUILD_TYPE} STREQUAL "Release")
	ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} src/NML.cpp ${NML_SOURCES})
	TARGET_COMPILE_OPTIONS(${CMAKE_PROJECT_NAME} PRIVATE -O2)
	TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${NML_LIBRARIES})
else()
	MESSAGE("Unknown build type")
endif()

# Test
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}-tests ${NML_SOURCES} ${TEST_SOURCES})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}-tests PRIVATE Catch2::Catch2WithMain utf8cpp PUBLIC ${NML_LIBRARIES})
