CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(cxxopts
	LANGUAGES CXX
	VERSION 1.0)

SET(CMAKE_CXX_FLAGS "-std=c++2a -O3 -Wall")


ADD_LIBRARY(cxxopts "cxxopts.hpp")
SET_TARGET_PROPERTIES(cxxopts PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(cxxopts PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>)
